# SFML_Puzzle_Game

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  sanity_test.cpp
